Conditional compilation of examples.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,4 +82,7 @@ install(EXPORT snmp++Targets
         DESTINATION lib/cmake/snmp++
 )
 
-add_subdirectory(consoleExamples)
+option(BUILD_EXAMPLES "Build examples." OFF)
+if(BUILD_EXAMPLES)
+    add_subdirectory(consoleExamples)
+endif()
