Add tests + SnmpMessage load const data.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,16 @@
 cmake_minimum_required(VERSION 3.12)
-project(snmp++ VERSION 3.3.11)
+project(snmp_pp VERSION 3.3.11)
 
-message(STATUS "Version: ${PROJECT_VERSION}")
-message(STATUS "Version: ${PROJECT_VERSION_MAJOR}")
-message(STATUS "Version: ${PROJECT_VERSION_MINOR}")
-message(STATUS "Version: ${PROJECT_VERSION_PATCH}")
+set(CMAKE_CXX_STANDARD 11)
+
+set(CMAKE_MODULE_PATH ${CMAKE_BINARY_DIR} ${CMAKE_MODULE_PATH})
 
 add_compile_definitions(SNMP_PP_VERSION_STRING="${PROJECT_VERSION}")
 add_compile_definitions(SNMP_PP_VERSION=${PROJECT_VERSION_MAJOR})
 add_compile_definitions(SNMP_PP_RELEASE=${PROJECT_VERSION_MINOR})
 add_compile_definitions(SNMP_PP_PATCHLEVEL=${PROJECT_VERSION_PATCH})
 
-add_library(snmp++
+add_library(snmp_pp
     src/address.cpp
     src/asn1.cpp
     src/auth_priv.cpp
@@ -40,19 +39,19 @@ add_library(snmp++
     src/v3.cpp
     src/vb.cpp
 )
-add_library(snmp++::snmp++ ALIAS snmp++)
+add_library(snmp_pp::snmp_pp ALIAS snmp_pp)
 
 find_package(Threads REQUIRED)
 find_package(OpenSSL REQUIRED)
 
-target_link_libraries(snmp++
+target_link_libraries(snmp_pp
     PUBLIC
         ${OPENSSL_SSL_LIBRARY}
         ${OPENSSL_CRYPTO_LIBRARY}
         ${CMAKE_THREAD_LIBS_INIT}
 )
 
-target_include_directories(snmp++
+target_include_directories(snmp_pp
     PUBLIC
         $<INSTALL_INTERFACE:include>
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
@@ -65,8 +64,8 @@ write_basic_package_version_file(
     COMPATIBILITY AnyNewerVersion
     )
 
-install(TARGETS snmp++
-        EXPORT snmp++Targets
+install(TARGETS snmp_pp
+        EXPORT snmp_ppTargets
         LIBRARY DESTINATION lib
         ARCHIVE DESTINATION lib
 )
@@ -76,13 +75,18 @@ install(
     DESTINATION include
     FILES_MATCHING PATTERN "*.h*")
 
-install(EXPORT snmp++Targets
-        FILE snmp++Config.cmake
-        NAMESPACE snmp++::
-        DESTINATION lib/cmake/snmp++
+install(EXPORT snmp_ppTargets
+        FILE snmp_ppConfig.cmake
+        NAMESPACE snmp_pp::
+        DESTINATION lib/cmake/snmp_pp
 )
 
 option(BUILD_EXAMPLES "Build examples." OFF)
 if(BUILD_EXAMPLES)
     add_subdirectory(consoleExamples)
 endif()
+
+option(BUILD_TESTS "Build tests." OFF)
+if (BUILD_TESTS)
+    add_subdirectory(tests)
+endif ()
